--- a/haxball_site/templates/core/home.html
+++ b/haxball_site/templates/core/home.html
@@ -31,7 +31,7 @@
                         <div class="d-flex">
                             <div class="d-inline-flex mb-2 px-1" style="margin: 3% 1px 0 2px">
                                 <a href="https://www.youtube.com/channel/UCZGpwhM76ieR15dU8kEzn0w" class="m-0 p-0">
-                                    <img src="/static/img/ico/youtube.PNG" title="discord"
+                                    <img src="/static/img/ico/youtube.PNG" title="youtube"
                                          style="cursor: pointer;" width="100%">
                                 </a>
                             </div>
