--- a/haxball_site/templates/core/home.html
+++ b/haxball_site/templates/core/home.html
@@ -29,26 +29,26 @@
                     <div class="card-body p-0 bg-for-online-body"
                          style="position: relative; border-radius: 0px 0px 20px 20px; width: inherit; padding: 5%">
                         <div class="d-flex">
-                            <div class="d-inline-flex mb-2 px-1" style="margin: 3% 1px 0 2px">
-                                <a href="https://www.youtube.com/channel/UCZGpwhM76ieR15dU8kEzn0w" class="m-0 p-0">
+                            <div class="d-inline-flex mb-2" style="margin: 3% 1px 0 2px">
+                                <a href="https://www.youtube.com/channel/UCZGpwhM76ieR15dU8kEzn0w" target="_blank" class="m-0 p-0">
                                     <img src="/static/img/ico/youtube.PNG" title="youtube"
                                          style="cursor: pointer;" width="100%">
                                 </a>
                             </div>
                             <div class="d-inline-flex mb-2" style="margin: 3% 1px 0 2px">
-                                <a href="https://discord.gg/8XrnsFGhdy" class="m-0 p-0">
+                                <a href="https://discord.gg/8XrnsFGhdy" target="_blank" class="m-0 p-0">
                                     <img src="{% static "img/ico/discord.PNG" %}" title="discord"
                                          style="cursor: pointer;" width="100%">
                                 </a>
                             </div>
                             <div class="d-inline-flex mb-2" style="margin: 3% 1px 0 2px">
-                                <a href="https://www.twitch.tv/cis_haxball" class="m-0 p-0">
+                                <a href="https://www.twitch.tv/cis_haxball" target="_blank" class="m-0 p-0" >
                                     <img src="{% static "img/ico/twitch.PNG" %}" title="twitch"
                                          style="cursor: pointer;" width="100%">
                                 </a>
                             </div>
                             <div class="d-inline-flex mb-2" style="margin: 3% 1px 0 2px">
-                                <a href="https://www.tiktok.com/@cishaxball?_t=8a7V9mjQfJ8&_r=1" class="m-0 p-0">
+                                <a href="https://www.tiktok.com/@cishaxball?_t=8a7V9mjQfJ8&_r=1" target="_blank" class="m-0 p-0">
                                     <img src="{% static "img/ico/tiktok.PNG" %}" title="tiktok"
                                          style="cursor: pointer;" width="100%">
                                 </a>
