change: for new season

--- a/haxball_site/templates/core/home.html
+++ b/haxball_site/templates/core/home.html
@@ -28,7 +28,7 @@
 
                     <div class="card-body p-0 bg-for-online-body"
                          style="position: relative; border-radius: 0px 0px 20px 20px; width: inherit; padding: 5%">
-                        <div class="d-flex">
+                        <div class="d-flex justify-content-center">
                             <div class="d-inline-flex mb-2" style="margin: 3% 1px 0 2px">
                                 <a href="https://www.youtube.com/channel/UCZGpwhM76ieR15dU8kEzn0w" target="_blank" class="m-0 p-0">
                                     <img src="/static/img/ico/youtube.PNG" title="youtube"
