--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -59,7 +59,7 @@
 
                     <a class="dropdown-item" href="{% url 'reservation:host_reservation' %}">Бронь хоста</a>
 
-                    <a class="dropdown-item submenu" href="#">⌛️ Переносы</a>
+                    <a class="dropdown-item submenu" href="#">Переносы</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="https://www.cis-haxball.com/post/751/postpone11vl">Высшая
                             Лига</a>
@@ -70,10 +70,10 @@
 
                     </div>
 
-                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/750/transfers-11">🤝 Трансферы</a>
-                    <a class="dropdown-item" href="{% url 'tournament:free_agent' %}">🆓 Свободные агенты</a>
-                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/111/org_razdel">❓ Орг. раздел</a>
-                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/397/reglament-9">📚 Регламент</a>
+                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/750/transfers-11">Трансферы</a>
+                    <a class="dropdown-item" href="{% url 'tournament:free_agent' %}">Свободные агенты</a>
+                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/111/org_razdel">Орг. раздел</a>
+                    <a class="dropdown-item" href="https://www.cis-haxball.com/post/397/reglament-9">Регламент</a>
 
                 </div>
             </li>
